--- a/templates/base2.html
+++ b/templates/base2.html
@@ -15,19 +15,12 @@
 		<link rel="stylesheet" media= 'screen' href="{{STATIC_URL}}css/mystyle.css">
 	</head>
 <body>
+	
+	<div id='page'>
+	{% block page %}{% endblock%}
+	</div>
 
-<div id='page'>
-<!-- navigation bar-->		
-<div class ="navbar " >
-<div class = "navbar-inner" >
-<div class ='container'>
-<ul class="nav"> 
-{% show_menu 0 100 100 100 "navigation.html" %}	
-</ul>
-</div>
-</div>		
-</div>
-</div>
+
 <!--js links for bootstrap-->
 <script src="{{STATIC_URL}}js/jquery.js"></script>
 <script src="{{STATIC_URL}}js/bootstrap-transition.js"></script>
