--- a/templates/base2.html
+++ b/templates/base2.html
@@ -16,9 +16,17 @@
 	</head>
 <body>
 	
-	<div id='page'>
-	{% block page %}{% endblock%}
-	</div>
+<div id='page'>
+{% block page %}{% endblock%}
+</div>
+<div id='footer'>
+<div class='links_at_footer'>
+
+</div>
+<div class='copyright'>
+<p>&copy; 2013</p>
+</div>
+
 
 
 <!--js links for bootstrap-->
