--- a/templates/base2.html
+++ b/templates/base2.html
@@ -21,9 +21,11 @@
 </div>
 <div id='footer'>
 <div class='links_at_footer'>
-
+<a href='https://twitter.com/profchingalo'><img width='30px' height='30px' src="{{MEDIA_URL}}images/twitter.png " alt="" ></a>
+<a href='https://www.facebook.com/profs.chingalo'><img width='30px' height='30px'  src="{{MEDIA_URL}}images/Facebook.png " alt="" ></a>
 </div>
 <div class='copyright'>
+<p>profs chingalo</p>	
 <p>&copy; 2013</p>
 </div>
 
