--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -1,21 +1,21 @@
-#page2{
-background:;
+#navigation_bar{
 max-width:80%;
-margin:0px auto;
+margin:8px auto;
 border-radius:10px;
 }
-#page{
-margin-top:-20px;
-background:#BFBFBF;
-max-width:85%;
-margin:0px auto;
-padding:10px;
-min-height:100px;
+#breadcrumbs{
+max-width:80%;
+margin:3px auto;
 border-radius:10px;
 }
+#contents_of_pages{
+max-width:79%;
+margin:5px auto;
+}
+
 #footer{
 max-width:78%;
-margin:0px auto;
+margin:5px auto;
 margin-top:20px;
 border-top:1px groove #ADD8E6;
 padding:10px;
