--- a/templates/plugins/slideshow_plugin.html
+++ b/templates/plugins/slideshow_plugin.html
@@ -4,9 +4,9 @@
   	
   	{% for image in latest %}
   	
-  	{% if forloop.counter == 1 %}
-  	<div class="active item  well">
-  		<img src ='{{MEDIA_URL}}{{ image.image }}' style="height: 250px">
+  	{% if forloop.counter == 1  %}
+  	<div class="active item  well " >
+  		<img src ='{{MEDIA_URL}}{{ image.image }}' style="height: 490px; width:100%; ">
   		<div class="carousel-caption">
           <h4 style="text-align: left">{{ image.desc_title }}</h4>
           <p style="text-align: left">{{ image.desc_text }}</p>
@@ -15,7 +15,7 @@
    	 
   	{% else%}
    	 <div class="item  well">
-   	 	<img src ='{{MEDIA_URL}}{{ image.image }}' style="height: 250px">
+   	 	<img src ='{{MEDIA_URL}}{{ image.image }}' style="height: 490px; width:100%;">
    	 	<div class="carousel-caption">
           <h4 style="text-align: left">{{ image.desc_title }}</h4>
           <p style="text-align: left">{{ image.desc_text }}</p>
