--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -3113,7 +3113,7 @@ table th[class*="span"],
   padding: 19px;
   margin-bottom: 20px;
   background-color: #f5f5f5;
-  border: 1px solid #e3e3e3;
+  border: 1px solid #f5f5f5;
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
