complete testing site contacts app on django admin site

--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -18,7 +18,7 @@ margin:5px auto;
 padding:10px;
 font-family:;
 color:;
-text-align:jusify:;
+text-align:jusify;
 max-width:80%;
 margin:0px auto;
 }
