--- a/static/css/mystyle.css
+++ b/static/css/mystyle.css
@@ -36,6 +36,20 @@ font-size:17px;
 font-style:bold;
 font-family:;
 }
+#services{
+font-family:;
+text-align: justify;
+color:;
+border-radius:10px;
+background-color:#E5E5E5;
+padding:10px;
+margin-bottom:10px;
+}
+#services #name{
+font-size:17px;
+font-style:bold;
+font-family:;
+}
 #footer{
 max-width:78%;
 margin:5px auto;
