--- a/templates/base.html
+++ b/templates/base.html
@@ -38,8 +38,9 @@
 </div>
 <div id='footer'>
 <div class='links_at_footer'>
-<a href='https://twitter.com/profchingalo'><img width='30px' height='30px' src="{{MEDIA_URL}}images/twitter.png " alt="" ></a>
-<a href='https://www.facebook.com/profs.chingalo/'><img width='30px' height='30px'  src="{{MEDIA_URL}}images/Facebook.png " alt="" ></a>
+<a href='https://twitter.com/profchingalo'><img width='30px' height='30px' src="{{MEDIA_URL}}images/twitter.png " alt="" >&nbsp;&nbsp;developer</a> 
+<a href='https://www.facebook.com/profs.chingalo/'><img width='30px' height='30px'  src="{{MEDIA_URL}}images/Facebook.png " alt="" >&nbsp;&nbsp;developer</a> 
+<a href='https://www.facebook.com/fchingalosite'><img width='30px' height='30px'  src="{{MEDIA_URL}}images/Facebook.png " alt="" >&nbsp;&nbsp;about site</a> 
 </div>
 <div class='copyright'>
 <p style='text-align:left;'>Created by Joseph Chingalo, computer science's student at UDSM<br><br></p>
