update base and home pages templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -38,11 +38,11 @@
 
 <!-- ---------------contents of page ------- ---->
 <div id='contents_of_pages'>
-	<div class = "row-fluid">
+	<div class = "row-fluid ">
 		<div class = "span9">
 			{% block page_contents %}{% endblock%}		
 		</div>
-		<div class = "span3 userful_links " >
+		<div class = "span3 userful_links well " >
 			<ul class = "nav nav-list">
 				<li class = "nav-header links_header">Useful links</li>
 				<li >{% placeholder useful_link1  %}</li>
@@ -59,7 +59,7 @@
 <!---------------- footer ---------------------->
 <div id='footer'>
 	<hr>
-	<div class = "row-fluid">
+	<div class = "row-fluid well">
 		<p style = "text-align:center;">Contact us</p><br>
 		<div class = "span4">
 			<address>
