--- a/templates/home.html
+++ b/templates/home.html
@@ -4,9 +4,10 @@
 <!-- contents for home pages of reference, report and home page of the site -->
 {% block page_contents %}
 <div class = "row-fluid">
-	{% placeholder website_introduction %}<br>
+	<div class = "well">
+		{% placeholder website_introduction %}<br>
 	
-	{% placeholder slideshow_homepages or %} No Slideshow available at now {% endplaceholder%} <br>
-	
+		{% placeholder slideshow_homepages or %} No Slideshow available at now {% endplaceholder%} <br>	
+	</div>	
 </div>
 {% endblock%}
