--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {% block page_contents %}
 <div class = "row-fluid">
 	<div class = "well">
-		{% placeholder website_introduction %}<br>
+		{% placeholder website_introduction %}<hr><br>
 	
 		{% placeholder slideshow_homepages or %} No Slideshow available at now {% endplaceholder%} <br>	
 	</div>	
