update base template

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,10 +39,10 @@
 <!-- ---------------contents of page ------- ---->
 <div id='contents_of_pages'>
 	<div class = "row-fluid ">
-		<div class = "span9">
+		<div class = "span9"  >
 			{% block page_contents %}{% endblock%}		
 		</div>
-		<div class = "span3 userful_links well " >
+		<div class = "span3 userful_links well " style = "min-height:270px;">
 			<ul class = "nav nav-list">
 				<li class = "nav-header links_header">Useful links</li>
 				<li >{% placeholder useful_link1  %}</li>
