--- a/templates/referenceUpload.html
+++ b/templates/referenceUpload.html
@@ -8,14 +8,33 @@
 		<!-------- upload step 1 ----------->
 		{% if step == "step1" %}
 		
-		<p>I am in step one</p>
+		<p>I am in step one</p>{{m}}<hr>
+		
+		<form action = "{% url 'referenceStep1'  %}" method = "POST" enctype = 'multipart/form-data'>
+			{% csrf_token %}
+			<table class="table table-striped">
+				{{form.as_table}}					
+			</table>
+			<input type = "submit" value = "Upload" name = "submit">&#160;&#160;
+			<input type = "reset" value = "Cancel" name = "reset">	
+								
+		</form>
 		
 		{% endif %}
 		
 		<!-------- upload step 2 ----------->	
 		{% if step == "step2" %}
 		
-		<p>I am in step two</p>
+		<p>I am in step two</p><hr>
+		
+		<form action = "" method = "POST" enctype = 'multipart/form-data'>
+			{% csrf_token %}
+			<table class="table table-striped">
+				{{form.as_table}}			
+			</table>
+			<input type = "submit" value = "Upload" name = "submit">&#160;&#160;
+			<input type = "reset" value = "Cancel" name = "reset">					
+		</form>
 		
 		{% endif %}		
 		
