add forms for other steps during uploading reference or report

--- a/templates/referenceUpload.html
+++ b/templates/referenceUpload.html
@@ -27,7 +27,7 @@
 		
 		<p>I am in step two</p><hr>
 		
-		<form action = "" method = "POST" enctype = 'multipart/form-data'>
+		<form action = "{% url 'referenceStep2'  %}" method = "POST" enctype = 'multipart/form-data'>
 			{% csrf_token %}
 			<table class="table table-striped">
 				{{form.as_table}}			
