--- a/templates/reportUpload.html
+++ b/templates/reportUpload.html
@@ -26,7 +26,7 @@
 		
 		<p>I am in step two</p><hr>
 		
-		<form action = "" method = "">
+		<form action = "{% url 'reportStep2'  %}" method = "POST" >
 			{% csrf_token %}
 			<table class="table table-striped">
 				{{form.as_table}}			
@@ -43,7 +43,7 @@
 		
 		<p>I am in step three</p><hr>
 		
-		<form action = "" method = "" enctype = 'multipart/form-data'>
+		<form action = "{% url 'reportStep3'  %}" method = "POST"  enctype = 'multipart/form-data'>
 			{% csrf_token %}
 			<table class="table table-striped">
 				{{form.as_table}}			
