--- a/templates/reportUpload.html
+++ b/templates/reportUpload.html
@@ -15,10 +15,13 @@
 			<table class="table table-striped">
 				{{form.as_table}}			
 			</table>
-			<input type = "submit" value = "Upload" name = "submit">&#160;&#160;
-			<input type = "reset" value = "Cancel" name = "reset">					
-		</form>		
-		
+			<span class="pull-right">
+				<input type = "submit" value = "Upload" name = "submit">&#160;&#160;
+				<input type = "reset" value = "Cancel" name = "reset">			
+			</span>				
+		</form>
+		<span class="pull-left"><button onclick="window.location.href='/reportupload/step2'">Skip this step</button></span>		
+		<br>
 		{% endif %}
 		
 		<!-------- upload step 2 ----------->
@@ -31,9 +34,13 @@
 			<table class="table table-striped">
 				{{form.as_table}}			
 			</table>
-			<input type = "submit" value = "Upload" name = "submit">&#160;&#160;
-			<input type = "reset" value = "Cancel" name = "reset">					
+			<span class="pull-right">
+				<input type = "submit" value = "Upload" name = "submit">&#160;&#160;
+				<input type = "reset" value = "Cancel" name = "reset">			
+			</span>					
 		</form>
+		<span class="pull-left"><button onclick="window.location.href='/reportupload/step3'">Skip this step</button></span>
+		<br>
 		
 		{% endif %}
 				
@@ -48,10 +55,12 @@
 			<table class="table table-striped">
 				{{form.as_table}}			
 			</table>
-			<input type = "submit" value = "Upload" name = "submit">&#160;&#160;
-			<input type = "reset" value = "Cancel" name = "reset">					
+			<span class="pull-right">
+				<input type = "submit" value = "Upload" name = "submit">&#160;&#160;
+				<input type = "reset" value = "Cancel" name = "reset">			
+			</span>					
 		</form>
-		
+		<br>
 		{% endif %}
 		
 	</div>	
