add block for userful links in home , reference and report templates

--- a/templates/home.html
+++ b/templates/home.html
@@ -11,3 +11,11 @@
 	</div>	
 </div>
 {% endblock%}
+{% block useful_links %}
+<li >{% placeholder useful_link1  %}</li>
+<li >{% placeholder useful_link2  %}</li>
+<li >{% placeholder useful_link3  %}</li>
+<li >{% placeholder useful_link4 %}</li>
+<li>{% placeholder useful_link5  %}</li>
+{% endblock%}
+
