--- a/templates/referenceUpload.html
+++ b/templates/referenceUpload.html
@@ -45,3 +45,12 @@
 	</div>	
 </div>
 {% endblock%}
+{% block useful_links %}
+<!--
+<li ><a href="/" style="color: white;"></a></li>
+<li ></li>
+<li ></li>
+<li ></li>
+<li></li>
+-->
+{% endblock%}
