--- a/templates/reportUpload.html
+++ b/templates/reportUpload.html
@@ -66,3 +66,12 @@
 	</div>	
 </div>
 {% endblock%}
+{% block useful_links %}
+<!--
+<li ><a href="/" style="color: white;"></a></li>
+<li ></li>
+<li ></li>
+<li ></li>
+<li></li>
+-->
+{% endblock%}
