--- a/templates/base.html
+++ b/templates/base.html
@@ -55,38 +55,12 @@
 </div>
 
 <!---------------- footer ---------------------->
-
 <div id='footer'>
 	
-	<div class = "row-fluid well">
-		<p style = "text-align:center;">Contact us</p><br>
-		<div class = "span4">
-			<address>
-				<strong>The Developer,</strong><br/>
-				Mr. Joseph Chingalo<br>
-				Computer Science Student - UDSM<br>
-				<abbr title="Phone number">P:</abbr> +255 687168637 or<br>  +255 718922311<br>	
-				<a href="mailto:profschingalo@gmail.com" style="color: #4D4D4D;">profschingalo@gmail.com</a><br>
-				<a href="https://www.facebook.com/profs.chingalo" style="color: #4D4D4D;">facebook</a><br>	
-				<a href="https://twitter.com/profchingalo" style="color: #4D4D4D;">Twitter</a><br>	
-				<a href="http://instagram.com/profschingalo" style="color: #4D4D4D;">Instagram</a><br>	
-			</address>		
-		</div>
+	<p>This site developed by <b>Mr. Joseph Chingalo</b>,<br> Computer science student at University of Dar es salaam<br>
+	&copy; {% now " Y" %}<br> all right reserved</p>
 		
-		<div class = "span4">
-			<address>
-				<strong>The Consultant,</strong><br/>
-				Mr. PhilibertChingalo<br>
-				P.O.Box 10112,<br>
-				Dar-es-salaam.<br>
-				<abbr title="Phone">P:</abbr> +255 784331413 or<br> +255 752134497<br>	
-				<a href="mailto:fchingalo@yahoo.com" style="color: #4D4D4D;">fchingalo@yahoo.com</a><br>
-				<a href="https://www.facebook.com/philibert.chingalo" style="color: #4D4D4D;">facebook</a><br>				
-			</address>
-		
-		</div>	
-	</div>
-</div>
+	<hr>	
 </div>
 
 <!--------------------js links for bootstrap---------->
