remove hardcorded urls in the templates

--- a/templates/referenceUpload.html
+++ b/templates/referenceUpload.html
@@ -21,7 +21,7 @@
 			</span>	
 								
 		</form>
-		<span class="pull-left"><button onclick="window.location.href='/referenceupload/step2'">Skip this step</button></span>
+		<span class="pull-left"><button onclick="window.location.href='{% url 'referenceStep2'  %}'">Skip this step</button></span>
 		<br>		
 		
 		{% endif %}
