add useful links for refernce and report files upload templates

--- a/templates/referenceUpload.html
+++ b/templates/referenceUpload.html
@@ -46,13 +46,11 @@
 </div>
 {% endblock%}
 {% block useful_links %}
+<li ><a href="/reference/">Reference</a></li>
+<li ><a href="{% url 'referenceStep1'  %}">Upload Reference</a></li>
 <!--
 
-<li ><a href="/" style="color: white;"></a></li>
-<li ></li>
-<li ></li>
-<li ></li>
-<li></li>
+<li ><a href=""></a></li>
 
 -->
 {% endblock%}
