--- a/templates/reportUpload.html
+++ b/templates/reportUpload.html
@@ -67,13 +67,13 @@
 </div>
 {% endblock%}
 {% block useful_links %}
+<li ><a href="/report">Report</a></li>
+<li ><a href="{% url 'reportStep1'  %}">Upload Report</a></li>
 <!--
+ 
+<li ><a href=""></a></li>
 
-<li ><a href="/" style="color: white;"></a></li>
-<li ></li>
-<li ></li>
-<li ></li>
-<li></li>
+
 
 -->
 {% endblock%}
