--- a/templates/reportUpload.html
+++ b/templates/reportUpload.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load cms_tags menu_tags %}
 
-<!-- contents for uploading a refence into the system -->
+<!-- contents for uploading a report into the system -->
 {% block page_contents %}
 <div class = "row-fluid">
 	<div class = "well">
@@ -66,14 +66,12 @@
 	</div>	
 </div>
 {% endblock%}
+
 {% block useful_links %}
 <li ><a href="/report">Report</a></li>
 <li ><a href="{% url 'reportStep1'  %}">Upload Report</a></li>
-<!--
- 
-<li ><a href=""></a></li>
-
-
-
--->
+<li ><a href="{% url 'reportDownload'  %}">Download Report</a></li>
+<li ><a href="{% url 'reportSearch'  %}">Search Report</a></li>
 {% endblock%}
+
+
