--- a/templates/searchreport.html
+++ b/templates/searchreport.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load cms_tags menu_tags %}
 
-<!-- contents for donload report----- -->
+<!-- contents for search report----- -->
 {% block page_contents %}
 <div class = "row-fluid">
 	<div class = "well">
