--- a/templates/reportUpload.html
+++ b/templates/reportUpload.html
@@ -8,7 +8,7 @@
 		<!-------- upload step 1 ----------->
 		{% if step == "step1" %}
 		
-		<p>I am in step one</p>{{m}}<hr>
+		<p>I am in step one</p><hr>
 		
 		<form action = "{% url 'reportStep1'  %}" method = "POST" >
 			{% csrf_token %}
