--- a/templates/base2.html
+++ b/templates/base2.html
@@ -32,7 +32,7 @@
 <!-----------breadcrums------------------------->
 <div id='breadcrumbs'>
 <ul class='breadcrumb'style=' text-align:left'>
-{% show_breadcrumb %}<span class="pull-right"><em>{% now "jS F Y" %}</em></span>
+<i>You are:</i> &#160;{% show_breadcrumb %}<span class="pull-right">Date:&#160;<em>{% now "jS F Y" %}</em></span>
 </ul>
 </div>
 
