--- a/templates/referenceUpload.html
+++ b/templates/referenceUpload.html
@@ -8,7 +8,7 @@
 		<!-------- upload step 1 ----------->
 		{% if step == "step1" %}
 		
-		<p>I am in step one</p><hr>
+		<p>Step 1 : Reference's Informations</p><hr>
 		
 		<form action = "{% url 'referenceStep1'  %}" method = "POST" enctype = 'multipart/form-data'>
 			{% csrf_token %}
@@ -16,8 +16,8 @@
 				{{form.as_table}}					
 			</table>
 			<span class="pull-right">
-				<input type = "submit" value = "Upload" name = "submit">&#160;&#160;
-				<input type = "reset" value = "Cancel" name = "reset">			
+				<input type = "submit" value = "submit" name = "submit">&#160;&#160;
+				<input type = "reset" value = "Reset" name = "reset">			
 			</span>	
 								
 		</form>
@@ -29,15 +29,15 @@
 		<!-------- upload step 2 ----------->	
 		{% if step == "step2" %}
 		
-		<p>I am in step two</p><hr>
+		<p>Step 2 : Details for Reference File to be uploaded</p><hr>
 		
 		<form action = "{% url 'referenceStep2'  %}" method = "POST" enctype = 'multipart/form-data'>
 			{% csrf_token %}
 			<table class="table table-striped">
 				{{form.as_table}}			
 			</table>
-			<input type = "submit" value = "Upload" name = "submit">&#160;&#160;
-			<input type = "reset" value = "Cancel" name = "reset">					
+			<input type = "submit" value = "Upload file" name = "submit">&#160;&#160;
+			<input type = "reset" value = "Reset" name = "reset">					
 		</form>
 		<br>
 		{% endif %}		
