--- a/templates/reportUpload.html
+++ b/templates/reportUpload.html
@@ -8,7 +8,7 @@
 		<!-------- upload step 1 ----------->
 		{% if step == "step1" %}
 		
-		<p>I am in step one</p><hr>
+		<p>Step 1 : Reciver of Report's Informations</p><hr>
 		
 		<form action = "{% url 'reportStep1'  %}" method = "POST" >
 			{% csrf_token %}
@@ -16,8 +16,8 @@
 				{{form.as_table}}			
 			</table>
 			<span class="pull-right">
-				<input type = "submit" value = "Upload" name = "submit">&#160;&#160;
-				<input type = "reset" value = "Cancel" name = "reset">			
+				<input type = "submit" value = "submit" name = "submit">&#160;&#160;
+				<input type = "reset" value = "Reset" name = "reset">			
 			</span>				
 		</form>
 		<span class="pull-left"><button onclick="window.location.href='{% url 'reportStep2'  %}'">Skip this step</button></span>		
@@ -27,7 +27,7 @@
 		<!-------- upload step 2 ----------->
 		{% if step == "step2" %}
 		
-		<p>I am in step two</p><hr>
+		<p>Step 2 : Report's Informations</p><hr>
 		
 		<form action = "{% url 'reportStep2'  %}" method = "POST" >
 			{% csrf_token %}
@@ -35,8 +35,8 @@
 				{{form.as_table}}			
 			</table>
 			<span class="pull-right">
-				<input type = "submit" value = "Upload" name = "submit">&#160;&#160;
-				<input type = "reset" value = "Cancel" name = "reset">			
+				<input type = "submit" value = "submit" name = "submit">&#160;&#160;
+				<input type = "reset" value = "Reset" name = "reset">			
 			</span>					
 		</form>
 		<span class="pull-left"><button onclick="window.location.href='{% url 'reportStep3'  %}'">Skip this step</button></span>
@@ -48,7 +48,7 @@
 		<!-------- upload step 3 ----------->
 		{% if step == "step3" %}
 		
-		<p>I am in step three</p><hr>
+		<p>Step 3 : Details for Report File to be uploaded</p><hr>
 		
 		<form action = "{% url 'reportStep3'  %}" method = "POST"  enctype = 'multipart/form-data'>
 			{% csrf_token %}
@@ -56,8 +56,8 @@
 				{{form.as_table}}			
 			</table>
 			<span class="pull-right">
-				<input type = "submit" value = "Upload" name = "submit">&#160;&#160;
-				<input type = "reset" value = "Cancel" name = "reset">			
+				<input type = "submit" value = "Upload file" name = "submit">&#160;&#160;
+				<input type = "reset" value = "Reset" name = "reset">			
 			</span>					
 		</form>
 		<br>
