check if all data from database can reach temolates

--- a/templates/downloadreport.html
+++ b/templates/downloadreport.html
@@ -5,7 +5,9 @@
 {% block page_contents %}
 <div class = "row-fluid">
 	<div class = "well">
-		{{message}}	
+		{{message}}	<br>{{receiverList}}<br>
+		{{fileList}}<br>
+		{{reportList}}
 				
 	</div>	
 </div>
