--- a/templates/downloadreference.html
+++ b/templates/downloadreference.html
@@ -5,7 +5,7 @@
 {% block page_contents %}
 <div class = "row-fluid">
 	<div class = "well">
-		{{message}}
+		{{message}}<br>{{referenceList}}<br>{{fileList}}
 		
 	</div>	
 </div>
