add font in base templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" media='screen' href="{{STATIC_URL}}css/docs.css" >
 		<link rel="stylesheet" media='screen' href="{{STATIC_URL}}css/prettify.css" >
 		<link rel="stylesheet" media= 'screen' href="{{STATIC_URL}}css/mystyle.css">
+		<link rel="stylesheet" media= 'screen' href="{{STATIC_URL}}css/font-awesome/css/font-awesome.min.css">
 	</head>
 <body>
 		
