--- a/templates/downloadreport.html
+++ b/templates/downloadreport.html
@@ -6,17 +6,7 @@
 <div class = "row-fluid">
 	<div class = "well">
 		
-		{% for receiver in receiverList %}
-		{% for report in  reportList%}
-		{% if report.name_of_receiver == receiver %}
-		{% for file in fileList %}
-		{% if file.report_title == report %}
-		{{receiver}}-->{{report}}-->{{file}}<br>
-		{% endif %}
-		{% endfor %}		
-		{% endif %}
-		{% endfor %}		
-		{% endfor %}
+		
 		<!--<i class="icon-file icon-white"></i><i class="icon-download-alt pull-right"></i>-->
 		<div class = "row-fluid">
 			<div class = "well">
@@ -26,28 +16,60 @@
 						{% for receiver in receiverList %}
 						{% if forloop.counter == 1 %}
 						<li class="active span3">
-							<a href="{{receiver.id}}" data-toggle='tab'>{{receiver}}</a>
+							<a href="#{{receiver.id}}" data-toggle='tab'>{{receiver}}</a>
 						</li>
 						{% else %}
 						<li class="span3">
-							<a href="{{receiver.id}}" data-toggle='tab'>{{receiver}}</a>
+							<a href="#{{receiver.id}}" data-toggle='tab'>{{receiver}}</a>
 						</li>
 						{% endif %}
 						{% endfor %}			
 					</ul>
 					<!-------------contents for tabs----------{% if forloop.counter == 1 %}{% endif %}-->
+
+
 					<div class="tab-content" style="text-align: left">
 						
-						<div class="tab-pane active well" id="tab1">
+						{% for receiver in receiverList %}
+						{% if forloop.counter == 1 %}
+						<div class="tab-pane active" id="{{receiver.id}}">
 							<ul class="nav nav-tabs nav-stacked">
-								<!--- details in the tabs {{.file.url}}---->
-								
-								<li style="padding: 3px"> 
-									<a href="">details<br><b><i class="icon-file icon-white"></i>file name</b>
-									<i class="icon-download-alt pull-right"></i></a>
-								</li>
+						<!--- details in the tabs {{.file.url}}---->
+								{% for report in  reportList%}						
+								{% if report.name_of_receiver == receiver %}
+								{% for file in fileList %}
+								{% if file.report_title == report %}
+								{{receiver}}-->{{report}}-->{{file}}-->{{receiver.id}}<br>
+								{% endif %}
+								{% endfor %}		
+								{% endif %}						
+								{% endfor %}
+								<li style="padding: 3px"> details<a href=""><b><i class="icon-file icon-white"></i>file name</b>
+								<i class="icon-download-alt pull-right"></i></a></li>					
 							</ul>				
 						</div>
+						{% else %}
+						<div class="tab-pane" id="{{receiver.id}}">
+							<ul class="nav nav-tabs nav-stacked">
+						<!--- details in the tabs {{.file.url}}---->
+								{% for report in  reportList%}						
+								{% if report.name_of_receiver == receiver %}
+								{% for file in fileList %}
+								{% if file.report_title == report %}
+								{{receiver}}-->{{report}}-->{{file}}-->{{receiver.id}}<br>
+								{% endif %}
+								{% endfor %}		
+								{% endif %}						
+								{% endfor %}
+								<li style="padding: 3px"> details<a href=""><b><i class="icon-file icon-white"></i>file name</b>
+								<i class="icon-download-alt pull-right"></i></a></li>					
+							</ul>				
+						</div>
+						{% endif %}					
+						{%endfor%}
+							
+						
+						
 					</div>			
 				</div>				
 			</div>	
