--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -12,7 +12,7 @@
 				Mr. Joseph Chingalo<br>
 				Computer Science Student - UDSM<br>
 				<abbr title="Phone number">P:</abbr> +255 687168637 or<br>  +255 718922311<br>	
-				<a href="mailto:profschingalo@gmail.com" style="color: #4D4D4D;">profschingalo@gmail.com</a><br>
+				<a href="mailto:profschingalo@gmail.com" style="color: #4D4D4D;"><i class = " icon-envelope"> </i>profschingalo@gmail.com</a><br>
 				<a href="https://www.facebook.com/profs.chingalo" style="color: #4D4D4D;">facebook</a><br>	
 				<a href="https://twitter.com/profchingalo" style="color: #4D4D4D;">Twitter</a><br>	
 				<a href="http://instagram.com/profschingalo" style="color: #4D4D4D;">Instagram</a><br>	
@@ -26,7 +26,7 @@
 				P.O.Box 10112,<br>
 				Dar-es-salaam.<br>
 				<abbr title="Phone">P:</abbr> +255 784331413 or<br> +255 752134497<br>	
-				<a href="mailto:fchingalo@yahoo.com" style="color: #4D4D4D;">fchingalo@yahoo.com</a><br>
+				<a href="mailto:fchingalo@yahoo.com" style="color: #4D4D4D;"><i class = " icon-envelope"> </i>fchingalo@yahoo.com</a><br>
 				<a href="https://www.facebook.com/philibert.chingalo" style="color: #4D4D4D;">facebook</a><br>				
 			</address>		
 		</div>
